# compds-python

./: README.md  sem1-intro.ipynb  sem2-strings.ipynb  sem3-sequences.ipynb  sem4-functions.ipynb  sem5-decorators.ipynb  sem6-dict-and-set.ipynb  sem7-regexp.ipynb  sem8-classes-exceptions.ipynb  sem9-magics.ipynb
sem10/: main_multiprocess.py  main_requests.py
sem11/: README.md  async_await_basics.py  intro.ipynb  main_httpx.py  pyproject.toml
sem12/: README.md  envs.py  main.py  quickstart.py  run_resnet.py
sem13/: README.md  numpy_matplotlib.ipynb  pandas_seaborn.ipynb
sem14/: _test_simple_math.py  simple_math.py  test_simple_math.py
