[tool.poetry]
name = "sem11"
version = "0.1.0"
description = "seminar 11 materials"
authors = ["Aleksandr Veselyev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.9.1"
ruff = "^0.0.292"
httpx = "^0.25.0"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
